# brooksdb

./: .gitignore  Dockerfile  LICENSE  Makefile  Makefile.docker  Makefile.old  README.md  Spec.hs  USAGE.txt  Vagrantfile  brooksdb.cabal  brooksdb.cabal.stack  brooksdev  cabal.sandbox.config  example.csv  grammar.txt  post.txt  pre.txt  stack.yaml  thoughts1.txt
Data/Relational/: Heading.hs  Tuple.hs
benchmark/: Bench.hs  BrooksBench.hs
cabal-dev/: cabal.config
d/: relation-with.d
lexer/: Main.hs
parser/: Main.hs
play/: Main.hs
src/: Main.hs  Temp.hs
src/Data/Brooks/: Vals.hs  Vars.hs
src/Data/Relation/: Operators.hs  Types.hs
src/Data/Relational/: Heading.hs  Types.hs
src/IO/Brooks/: Csv.hs  Database.hs  Timothy.hs
src/Language/Heidi/: Grammar.y  Lexer.x  Parser.y  grammar.y
tests/: Main.hs  Spec.hs  TestMain.hs
