name:                brooksdb
version:             0.1.0.0
synopsis:            A RDBMS based on D&D's Third Manifesto and more.
description:         It's yummy.
homepage:            http://github.com/lgastako/brooksdb
license:             AllRightsReserved
license-file:        LICENSE
author:              John Evans
maintainer:          lgastako@gmail.com
copyright:           2013 John Evans
category:            Database
build-type:          Simple
cabal-version:       >=1.16.0.2

-- , XRankNTypes (other-extensions)

executable brooksdb
    default-language:    Haskell2010
    hs-source-dirs:      src
    ghc-options:         -Wall
    other-extensions:    DeriveDataTypeable
    main-is:             Main.hs
    other-modules:       Language.Heidi.Parser,
                         Language.Heidi.Lexer
    build-tools:         alex, happy
    build-depends:       base                           ==4.6.*,
                         containers                     ==0.5.*,
                         random                         ==1.0.1.1,
                         acid-state                     ==0.12.2,
                         mtl                            ==2.1.2,
                         safecopy                       ==0.8.2,
                         MissingH                       ==1.2.*,
                         plugins                        ==1.5.3.0,
                         process                        ==1.1.0.2,
                         array                          ==0.4.0.1,
                         readline                       ==1.0.3.0,
                         network-uri                    ==2.6.*

test-suite tests
    build-depends:    base, brooksdb, hspec == 1.11.*
    default-language: Haskell2010
    hs-source-dirs:   tests src
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0

benchmark criterion
    build-depends:    base, brooksdb, criterion == 0.6.*
    default-language: Haskell2010
    hs-source-dirs:   benchmark
    main-is:          Bench.hs
    type:             exitcode-stdio-1.0

source-repository head
    type:     git
    location: https://github.com/lgastako/brooksdb.git
