name:                brooksdb
version:             0.1.0.0
synopsis:            A RDBMS based on D&D's Third Manifesto and more.
description:         It's yummy.
homepage:            http://github.com/lgastako/brooksdb
license:             AllRightsReserved
license-file:        LICENSE
author:              John Evans
maintainer:          lgastako@gmail.com
copyright:           2013 John Evans
category:            Database
build-type:          Simple
cabal-version:       >= 1.18

-- , XRankNTypes (other-extensions)

library
    exposed-modules:     Data.Relation.Types
    default-language:    Haskell2010
    hs-source-dirs:      src
    ghc-options:         -Wall
    other-extensions:    DeriveDataTypeable
    other-modules:       Language.Heidi.Parser,
                         Language.Heidi.Lexer
    build-tools:         alex, happy
    build-depends:       base                >= 4.7.0.0
                       , acid-state
                       , array
                       , containers
                       , csv
                       , docopt
                       , MissingH
                       , mtl
                       , network-uri
                       , process
                       , random
                       , safecopy

executable brooksdb
    build-depends:       base                >= 4.7.0.0
                       , acid-state
                       , array
                       , containers
                       , csv
                       , docopt
                       , MissingH
                       , mtl
                       , network-uri
                       , process
                       , random
                       , safecopy
    default-language:    Haskell2010
    hs-source-dirs:      src
    main-is:             Main.hs

test-suite tests
    build-depends:    base
                    , brooksdb
                    , hspec
                    , QuickCheck
    default-language: Haskell2010
    hs-source-dirs:   tests
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0

-- benchmark criterion
--     build-depends:    base, brooksdb, criterion == 0.6.*
--     default-language: Haskell2010
--     hs-source-dirs:   benchmark
--     main-is:          Bench.hs
--     type:             exitcode-stdio-1.0

source-repository head
    type:     git
    location: https://github.com/lgastako/brooksdb.git
